--- a/custom-css/findFoodCSSTest.css
+++ b/custom-css/findFoodCSSTest.css
@@ -5,7 +5,20 @@
     border-radius: 4px;
     border-width: 2px;
     border-color: black;
+    margin-bottom: 5px;
 }
+
+#btnClearAll{
+    background-color: #1C939B;
+    color: white;
+    width: 100%;
+    border-radius: 4px;
+    border-width:2px;
+    border-color: black;   
+    margin-bottom: 5px;
+
+}
+
 #accordion {
     margin-bottom: 5px;
 }
