map on filter page

--- a/custom-css/findFoodCSSTest.css
+++ b/custom-css/findFoodCSSTest.css
@@ -87,3 +87,13 @@ img {
     background-color:transparent;
     border-color:transparent;
 }
+#mapIframe {
+    height: 300px;
+    width: 70%;
+    border-color:black;
+
+}
+#iframediv {
+    padding-bottom: 20px;
+
+}
